2005-07-02  Jim Huang  <jserv@kaffe.org>

	* src/mainframe.cpp 
	(CMainFrame::CreateMenu): Remove puzzling comments which confuse
	intltool.
	(CMainFrame::OnAbout): Update homepage information.

	* src/pcmanx_pure_gtk2.cpp (main):
	Adjust the sequence of gtk_init and g_thread_init, and use fake
	argc/agrv to avoid redundant parsing.

	* po/zh_TW.po:
	Regenerated.

2005-07-02  Kanru Chen  <koster@debian.org.tw>
	
	* configure.ac:
	Change AC_DEFINED(VERSION,...) to AC_DEFINED_UNQUOTED ensure really
	defined this variable.
	
	* ABOUT-NLS:
	New file. need by automake-1.9.

2005-07-02  Jim Huang  <jserv@kaffe.org>

	* src/termview.cpp (CTermView::OnLButtonDown),
	src/configfile.cpp (CConfigFile::DoLoad) (CConfigFile::DoSave),
	src/appconfig.cpp (CAppConfig::LoadFavorites),
	src/sitelistdlg.cpp (CSiteListDlg::OnSearch):
	Remove misleading \!\! expression.

2005-07-02  Kanru Chen  <koster@debian.org.tw>

	* src/font.cpp 
	(CFont::CreateXftFont(string, int, int, bool)):
	Adjust font size policy to prevent infinite loop.

	* src/widget.cpp,
	src/telnetcon.cpp:
	Add usleep(100) between each idle call to prevent cpu load
	too high.

2005-07-02  Jim Huang  <jserv@kaffe.org>

	* po/POTFILES.in:
	New file. Put the source filenames to be translated here.

	* configure.ac:
	Enhance GNU Gettext support.

	* src/Makefile.am:
	Include *.xpm in EXTRA_DIST.

	* po/zh_TW.po:
	Updated according to new layout.

2005-07-02  Jim Huang  <jserv@kaffe.org>

	* autogen.sh,
	configure.ac,
	Doxygen.in,
	Makefile.am,
	src/Makefile.am:
	New files. Autotools support.

	* po/zh_TW.po:
	Adjust translated messages path.

2005-07-02  Kanru Chen  <koster@debian.org.tw>

	* src/Makefile-byhand:
	Cleanup pkgconfig rules.

2005-07-01  PCMan  <hzysoft@sina.com.tw>

	* Initial import of pcmanx_pure_gtk2.